--- a/index.html
+++ b/index.html
@@ -4,14 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test File</title>
+    <style>
+        h1{
+            color: #f3f3f3;
+            font-family: 'Courier New', Courier, monospace;
+            text-align: center;
+        }
+
+        h2{
+            text-align: center;
+            background-color: aqua;
+        }
+
+        p{
+            font-family: 'Courier New', Courier, monospace;
+        }
+
+    </style>
 </head>
 <body>
-    <ul>
-        <li>Hello</li>
-        <li>Hello</li>
-        <li>Hello</li>
-        <li>Hello</li>
+  <h1>Welcome to my First Live Web Page!</h1>
+  <h2>ABOUT ME</h2>
 
-    </ul>
+  <p>
+    I am Jaideep Lalchandani, a B. Tech CSE 3rd Year student. I love Web development and I have been into front-end development since a long time now.<br>
+    Apart from academics, I like to play sports that are intense. I love playing football and Table tennis, cricket is another one of my favourites.<br>
+    <br>
+    Here are some links that'll surely help you understand me better!<br>
+<ul>
+    <li>My <a href="https://www.instagram.com/shutterspeed_12/">Photography Page!</a></li>
+    <li>My <a href="https://www.instagram.com/jai_xvi/">Personal Instagram!</a></li>
+    <li>My <a href="https://jai2016blog.wordpress.com/">Blogging Website</a></li>
+</ul>
+
+Thankyou for your time!!
+  </p>
 </body>
 </html>
