--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <style>
         h1{
             color: #f3f3f3;
+            background-color: black;
             font-family: 'Courier New', Courier, monospace;
             text-align: center;
         }
