--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@
 Thankyou for your time!!
   </p>
 
-  <img src ="C:\Users\Geeta Lalchandani\Pictures\Screenshots">
+  <img src="C:\Users\Geeta Lalchandani\Pictures\Screenshots\Screenshot (396).png">
 </body>
 </html>
