--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 Thankyou for your time!!
   </p>
-
+<h2>Output : </h2>
   <img src="C:\Users\Geeta Lalchandani\Pictures\Screenshots\Screenshot (396).png">
 </body>
 </html>
