--- a/HTML files/practical2.html
+++ b/HTML files/practical2.html
@@ -41,6 +41,6 @@
 Thankyou for your time!!
   </p>
 <h2 style="text-align: center;">Output : </h2>
-  <img src="Images\Screenshot (396).png" style="width:70%;margin-left: auto;margin-right: auto;display: block;">
+  <img src="https://github.com/jaixix/FullStackRep/blob/master/Images/Screenshot%20(396).png" style="width:70%;margin-left: auto;margin-right: auto;display: block;">
 </body>
 </html>
