--- a/HTML files/practical1.html
+++ b/HTML files/practical1.html
@@ -25,6 +25,6 @@
 
     <h2>Output : </h2>
     <h2 style="text-align: center;">Offline HTML Editor!</h2>
-    <img src="codepenassign1.png" style="width:70%;display: block;margin-left:auto;margin-right:auto;">
+    <img src="https://github.com/jaixix/FullStackRep/blob/master/Images/vsassign1.png?raw=true" style="width:70%;display: block;margin-left:auto;margin-right:auto;">
 </body>
 </html>
