--- a/HTML files/practical1.html
+++ b/HTML files/practical1.html
@@ -3,28 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>PRACTICAL-1</title>
 </head>
 <body>
-    <h1>Welcome to My Webpage!</h1>
-    <h2>ABOUT ME</h2>
-
-    <p>
-        I am Jaideep Lalchandani, a B. Tech CSE 3rd Year student. I love Web development and I have been into front-end development since a long time now.<br>
-        Apart from academics, I like to play sports that are intense. I love playing football and Table tennis, cricket is another one of my favourites.<br>
-        <br>
-        Here are some links that'll surely help you understand me better!<br>
-    <ul>
-        <li>My <a href="https://www.instagram.com/shutterspeed_12/">Photography Page!</a></li>
-        <li>My <a href="https://www.instagram.com/jai_xvi/">Personal Instagram!</a></li>
-        <li>My <a href="https://jai2016blog.wordpress.com/">Blogging Website</a></li>
-    </ul>
-
-    Thankyou for your time!!
-    </p>
-
-    <h2>Output : </h2>
-    <h2 style="text-align: center;">Offline HTML Editor!</h2>
-    <img src="https://github.com/jaixix/FullStackRep/blob/master/Images/vsassign1.png?raw=true" style="width:70%;display: block;margin-left:auto;margin-right:auto;">
+    <h2 style="color: brown;">Practical-1: Create a Web page including HTML basic skeleton using Offline HTML Editor and Online Sandbox Environment.</h2>
+    <h1>Welcome to FullStack Course</h1>
+    <h2 style="color: rgb(6, 73, 6);">About Course</h2>
+    <p>Front-end web development is everything involved in programming the user interface of a web application. Typically it refers to the Hypertext Markup Language (HTML), Cascading Style Sheets (CSS) and JavaScript portion of web site production as opposed to the database on server-side programming. It encompasses everything from building a simple page of HTML text to creating complex, responsive HTML5 websites designed to be accessed via various different browsers, devices and screen sizes.</p>
+    <h2 style="color: rgb(6, 73, 6);">OUTPUT</h2>
+    <h3 style="text-align: center;">Offline HTML Editor</h3>
+    <img src="https://github.com/jaixix/FullStackRep/blob/master/Images/vsassign1.png?raw=true" style="width: 80%;display: block; margin-left: auto; margin-right: auto;">
+    <br><br><h3 style="text-align: center;">Online Sandbox Environment</h3>
+    <img src=""  style="width: 80%;display: block; margin-left: auto; margin-right: auto;">
 </body>
 </html>
