--- a/HTML files/practical3.html
+++ b/HTML files/practical3.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Practical - 3</title>
-	<link rel="stylesheet" type="text/css" href="../CSS files/prac3.css">
+	<link rel="stylesheet" type="text/css" href="https://github.com/jaixix/FullStackRep/blob/master/CSS%20Files/prac3.css">
 </head>
 <body >
 	<h2>Practical - 3 : Create a Web page showing a basic HTML structure using character Entities and Span tags.</h2>
