--- a/HTML files/practical1.html
+++ b/HTML files/practical1.html
@@ -6,11 +6,11 @@
     <title>PRACTICAL-1</title>
 </head>
 <body>
-    <h2 style="color: brown;">Practical-1: Create a Web page including HTML basic skeleton using Offline HTML Editor and Online Sandbox Environment.</h2>
+    <h2 class="brown">Practical-1: Create a Web page including HTML basic skeleton using Offline HTML Editor and Online Sandbox Environment.</h2>
     <h1>Welcome to FullStack Course</h1>
-    <h2 style="color: rgb(6, 73, 6);">About Course</h2>
+    <h2 class="green">About Course</h2>
     <p>Front-end web development is everything involved in programming the user interface of a web application. Typically it refers to the Hypertext Markup Language (HTML), Cascading Style Sheets (CSS) and JavaScript portion of web site production as opposed to the database on server-side programming. It encompasses everything from building a simple page of HTML text to creating complex, responsive HTML5 websites designed to be accessed via various different browsers, devices and screen sizes.</p>
-    <h2 style="color: rgb(6, 73, 6);">OUTPUT</h2>
+    <h2 class="green">OUTPUT</h2>
     <h3 style="text-align: center;">Offline HTML Editor</h3>
     <img src="https://github.com/jaixix/FullStackRep/blob/master/Images/vsassign1.png?raw=true" style="width: 80%;display: block; margin-left: auto; margin-right: auto;">
     <br><br><h3 style="text-align: center;">Online Sandbox Environment</h3>
