--- a/HTML files/practical1.html
+++ b/HTML files/practical1.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PRACTICAL-1</title>
+    <link rel="stylesheet" type="text/css" href="../CSS Files/prac1.css">
 </head>
 <body>
     <h2 class="brown">Practical-1: Create a Web page including HTML basic skeleton using Offline HTML Editor and Online Sandbox Environment.</h2>
