--- a/index.html
+++ b/index.html
@@ -3,44 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test File</title>
+    <title>Practical-4</title>
     <style>
+        body{
+            background-color: burlywood;
+        }
         h1{
-            color: #f3f3f3;
-            background-color: black;
-            font-family: 'Courier New', Courier, monospace;
-            text-align: center;
+            color:green;
         }
-
-        h2{
-            text-align: center;
-            background-color: aqua;
+        #one{
+            color:green;
         }
-
-        p{
-            font-family: 'Courier New', Courier, monospace;
-        }
-
     </style>
 </head>
 <body>
-  <h1>Welcome to my First Live Web Page!</h1>
-  <h2>ABOUT ME</h2>
-
-  <p>
-    I am Jaideep Lalchandani, a B. Tech CSE 3rd Year student. I love Web development and I have been into front-end development since a long time now.<br>
-    Apart from academics, I like to play sports that are intense. I love playing football and Table tennis, cricket is another one of my favourites.<br>
-    <br>
-    Here are some links that'll surely help you understand me better!<br>
-<ul>
-    <li>My <a href="https://www.instagram.com/shutterspeed_12/">Photography Page!</a></li>
-    <li>My <a href="https://www.instagram.com/jai_xvi/">Personal Instagram!</a></li>
-    <li>My <a href="https://jai2016blog.wordpress.com/">Blogging Website</a></li>
-</ul>
-
-Thankyou for your time!!
-  </p>
-<h2 style="text-align: center;">Output : </h2>
-  <img src="Screenshot (396).png" style="width:70%;margin-left: auto;margin-right: auto;display: block;">
+    <h1>Welcome To FullStack Course</h1>
+    <h2>About Course</h2>
+    <p>Front-end web development is everything involved in programming the user interface of a web application. Typically it refers to the Hypertext Markup Language (HTML), Cascading Style Sheets (CSS) and JavaScript portion of web site production as opposed to the database on server-side programming. It encompasses everything from building a simple page of HTML text to creating complex, responsive HTML5 websites designed to be accessed via various different browsers, devices and screen sizes.</p>
+    <h2 id="one">List Of Practicals :</h2>
+    <ol>
+        <li>Create a Web page including HTML basic skeleton using Online HTML Editor and Online Sandbox Environment. <a href="https://jaixix.github.io/FullStackRep/HTML%20files/practical1.html" target="_blank">Practical1</a></li>
+        <li>Live your First Web-Page on Github.  <a href="https://jaixix.github.io/FullStackRep/HTML%20files/practical2.html" target="_blank">Practical2</a></li>
+        <li>Create a webpage showing a basic HTML structure using character entities and span tag. <a href="https://jaixix.github.io/FullStackRep/HTML%20files/practical3.html" target="_blank">Practical3</a></li>
+        <li>Create a website having list of all practical and their individual practical page links. <a href="https://jaixix.github.io/FullStackRep/HTML%20files/practical4.html" target="_blank">Practical4</a></li>
+    </ol>
 </body>
 </html>
