--- a/index.html
+++ b/index.html
@@ -4,17 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practical-4</title>
-    <style>
-        body{
-            background-color: burlywood;
-        }
-        h1{
-            color:green;
-        }
-        #one{
-            color:green;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="CSS Files/prac4.css">
 </head>
 <body>
     <h1>Welcome To FullStack Course</h1>
