--- a/HTML files/practical2.html
+++ b/HTML files/practical2.html
@@ -12,6 +12,6 @@
     <h2 class="green">About Course</h2>
     <p>Front-end web development is everything involved in programming the user interface of a web application. Typically it refers to the Hypertext Markup Language (HTML), Cascading Style Sheets (CSS) and JavaScript portion of web site production as opposed to the database on server-side programming. It encompasses everything from building a simple page of HTML text to creating complex, responsive HTML5 websites designed to be accessed via various different browsers, devices and screen sizes.</p>
     <h2 class="green">OUTPUT</h2>
-    <img src="https://raw.githubusercontent.com/jaixix/FullStackRep/master/Images/Screenshot%20(396).png"  style="width: 80%;display: block; margin-left: auto; margin-right: auto;">
+    <img src="https://raw.githubusercontent.com/jaixix/FullStackRep/master/Images/Screenshot%20(396).png">
 </body>
 </html>
