--- a/HTML files/practical4.html
+++ b/HTML files/practical4.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practical-4</title>
+    <link rel="stylesheet" type="text/css" href="../CSS Files/prac4.css">
 </head>
 <body>
     <h1>Welcome To FullStack Course</h1>
