--- a/HTML files/practical3.html
+++ b/HTML files/practical3.html
@@ -7,7 +7,7 @@
 <body >
 	<h2>Practical - 3 : Create a Web page showing a basic HTML structure using character Entities and Span tags.</h2>
 	<h1>Output</h1>
-<div style = "font-family:courier,arial,helvetica; font-weight:600; font-size:1.1em;">
+<div class="styled">
 	&emsp;&emsp;&lt;!DOCTYPE <span class="r">html</span>&gt;<br>
 	&emsp;&emsp;&lt;html <span class="r">lang=</span><span class="b">"en"</span>&gt;<br>
 	&emsp;&emsp;&lt;head&gt;<br>
