--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome To This Course </title>
+    <title>Introduction To Git and Github</title>
     <link rel="stylesheet" type="text/css" href="CSS Files/prac4.css">
 </head>
 <body>
