--- a/HTML files/practical5.html
+++ b/HTML files/practical5.html
@@ -8,7 +8,7 @@
 <body>
     <p>Title bar goes here!</p>
     <h3>Introduction to Front-End technologies</h3>
-    <img src="">
+    <img src="https://github.com/jaixix/FullStackRep/blob/master/Images/image%20map%20image.jpg?raw=true">
     <p>Click on any part of logo to know more about these Technologies</p>
 </body>
 </html>
