--- a/HTML files/practical5html.html
+++ b/HTML files/practical5html.html
@@ -13,6 +13,12 @@
         HTML is not a programming language, meaning it doesn’t have the ability to create dynamic functionality. 
         Instead, it makes it possible to organize and format documents, similarly to Microsoft Word.
         When working with HTML, we use simple code structures (tags and attributes) to mark up a website page.
+        Overall, HTML is a markup language that is really straightforward and easy to learn even for complete beginners in website building.
+        HTML was invented by Tim Berners-Lee, a physicist at the CERN research institute in Switzerland. 
+        He came up with the idea of an Internet-based hypertext system.
+        Hypertext means a text that contains references (links) to other texts that viewers can access immediately. 
+        He published the first version of HTML in 1991, consisting of 18 HTML tags. Since then, each new version of the HTML language 
+        came with new tags and attributes (tag modifiers) to the markup.
     </p>
 </body>
 </html>
