--- a/HTML files/practical5html.html
+++ b/HTML files/practical5html.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Introduction</title>
+    <style>
+        img{
+            display: block;
+            margin: 0 auto 0 auto;
+        }
+    </style>
 </head>
 <body>
-    <img src="">
+    <img src="https://github.com/jaixix/FullStackRep/blob/master/Images/introToHTML.jpg?raw=true">
     <p>
         HTML stands for Hypertext Markup Language. It allows the user to create and structure sections, 
         paragraphs, headings, links, and blockquotes for web pages and applications. 
