--- a/HTML files/practical5html.html
+++ b/HTML files/practical5html.html
@@ -5,9 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Introduction</title>
     <style>
+
+        body{
+            text-align: center;
+        }
+
         img{
             display: block;
             margin: 0 auto 0 auto;
+            max-width: 638px;
+            max-height: 444px;
         }
     </style>
 </head>
