--- a/HTML files/practical5.html
+++ b/HTML files/practical5.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image Map</title>
-    <link rel="stylesheet" href="../CSS Files/prac5.css" typr="text/css">
+    <link rel="stylesheet" href="../CSS Files/prac5.css" type="text/css">
 </head>
 <body>
     <p>Title bar goes here!</p>
