--- a/HTML files/practical5html.html
+++ b/HTML files/practical5html.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Introduction</title>
+    <link rel="stylesheet" href="../CSS Files/prac5universal.css" type="text/css">
 </head>
 <body>
     <img src="https://github.com/jaixix/FullStackRep/blob/master/Images/introToHTML.jpg?raw=true">
