--- a/HTML files/practical5html.html
+++ b/HTML files/practical5html.html
@@ -19,7 +19,7 @@
         He came up with the idea of an Internet-based hypertext system.
         Hypertext means a text that contains references (links) to other texts that viewers can access immediately. 
         He published the first version of HTML in 1991, consisting of 18 HTML tags. Since then, each new version of the HTML language 
-        came with new tags and attributes (tag modifiers) to the markup.
+        came with new tags and attributes (tag modifiers) to the markup. HTML is a markup language that web browsers use to interpret and compose text, images, and other material into visual or audible web pages. Default characteristics for every item of HTML markup are defined in the browser, and these characteristics can be altered or enhanced by the web page designer's additional use of CSS. Many of the text elements are found in the 1988 ISO technical report TR 9537 Techniques for using SGML, which in turn covers the features of early text formatting languages such as that used by the RUNOFF command developed in the early 1960s for the CTSS (Compatible Time-Sharing System) operating system: these formatting commands were derived from the commands used by typesetters to manually format documents. However, the SGML concept of generalized markup is based on elements (nested annotated ranges with attributes) rather than merely print effects, with also the separation of structure and markup; HTML has been progressively moved in this direction with CSS.
     </p>
 </body>
 </html>
