--- a/HTML files/practical5.html
+++ b/HTML files/practical5.html
@@ -9,7 +9,7 @@
 <body>
     <p>Title bar goes here!</p>
     <h1>Introduction to Front-End technologies</h1>
-    <img src="https://github.com/jaixix/FullStackRep/blob/master/Images/image%20map%20image.jpg?raw=true" usemap="map1">
+    <img src="https://github.com/jaixix/FullStackRep/blob/master/Images/image%20map%20image.jpg?raw=true" usemap="#map1">
     
     <map name="map1">
         <area shape="rect" coords="19,8,172,165" href="practical5html.html" alt="HTML Introduction">
