--- a/HTML files/practical5.html
+++ b/HTML files/practical5.html
@@ -12,7 +12,8 @@
     <img src="https://github.com/jaixix/FullStackRep/blob/master/Images/image%20map%20image.jpg?raw=true" usemap="#map1">
     
     <map name="map1">
-        <area shape="rect" coords="19,8,172,165" href="practical5html.html" alt="HTML Introduction">
+        <area shape="rect" coords="19,8,172,165" href="practical5html.html" alt="HTML Introduction" target="blank">
+        <area shape="circle" coords="286,94,99" href="practical5css.html" alt="CSS Introduction">
     </map>
 
     <p>Click on any part of logo to know more about these Technologies</p>
