--- a/HTML files/practical5.html
+++ b/HTML files/practical5.html
@@ -13,7 +13,9 @@
     
     <map name="map1">
         <area shape="rect" coords="19,8,172,165" href="practical5html.html" alt="HTML Introduction" target="blank">
-        <area shape="circle" coords="286,94,99" href="practical5css.html" alt="CSS Introduction">
+        <area shape="circle" coords="288,97,90" href="practical5css.html" alt="CSS Introduction">
+        <area shape="rect" coords="25,196,170,337" href="practical5js.html" alt="JS Introduction">
+        <area shape="poly" coords="288,202,346,222,337,300,287,328,240,301,232,223" href="practical5bs.html" alt="Bootsrap Introduction">
     </map>
 
     <p>Click on any part of logo to know more about these Technologies</p>
