--- a/HTML files/practical5.html
+++ b/HTML files/practical5.html
@@ -9,6 +9,13 @@
 <body>
     <p>Title bar goes here!</p>
     <h1>Introduction to Front-End technologies</h1>
+
+    <img src="">
+
+    <map name="map2">
+        
+    </map>
+
     <img src="https://github.com/jaixix/FullStackRep/blob/master/Images/image%20map%20image.jpg?raw=true" usemap="#map1">
     
     <map name="map1">
