--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <p>Front-end web development is everything involved in programming the user interface of a web application. Typically it refers to the Hypertext Markup Language (HTML), Cascading Style Sheets (CSS) and JavaScript portion of web site production as opposed to the database on server-side programming. It encompasses everything from building a simple page of HTML text to creating complex, responsive HTML5 websites designed to be accessed via various different browsers, devices and screen sizes.</p>
     <h2 id="one">List Of Practicals :</h2>
     <ol>
-        <li>Create a Web page including HTML basic skeleton using Online HTML Editor and Online Sandbox Environment. <a href="https://jaixix.github.io/FullStackRep/HTML%20files/practical1.html" target="_blank">Practical1</a></li>
-        <li>Live your First Web-Page on Github.  <a href="https://jaixix.github.io/FullStackRep/HTML%20files/practical2.html" target="_blank">Practical2</a></li>
-        <li>Create a webpage showing a basic HTML structure using character entities and span tag. <a href="https://jaixix.github.io/FullStackRep/HTML%20files/practical3.html" target="_blank">Practical3</a></li>
-        <li>Create a website having list of all practical and their individual practical page links. <a href="https://jaixix.github.io/FullStackRep/HTML%20files/practical4.html" target="_blank">Practical4</a></li>
+        <li>Create a Web page including HTML basic skeleton using Online HTML Editor and Online Sandbox Environment. <a href="HTML files/practical1.html" target="_blank">Practical1</a></li>
+        <li>Live your First Web-Page on Github.  <a href="HTML files/practical2.html" target="_blank">Practical2</a></li>
+        <li>Create a webpage showing a basic HTML structure using character entities and span tag. <a href="HTML files/practical3.html" target="_blank">Practical3</a></li>
+        <li>Create a website having list of all practical and their individual practical page links. <a href="HTML files/practical4.html" target="_blank">Practical4</a></li>
         <li><a href="HTML files/practical5.html" target="blank">Practical 5</a></li>
     </ol>
 </body>
