--- a/HTML files/practical5.html
+++ b/HTML files/practical5.html
@@ -10,10 +10,15 @@
     <p>Title bar goes here!</p>
     <h1>Introduction to Front-End technologies</h1>
 
-    <img src="">
+    <img src="https://github.com/jaixix/FullStackRep/blob/master/Images/titlebar.jpg?raw=true" usemap="#map2">
 
     <map name="map2">
-        
+            <area shape="rect" coords="10,5,120,71" href="../index.html">
+            <area shape="rect" coords="125,5,315,71" href="practical1.html">
+            <area shape="rect" coords="320,5,480,71" href="practical2.html">
+            <area shape="rect" coords="490,5,660,72" href="practical3.html">
+            <area shape="rect" coords="668,5,830,73" href="practical4.html">
+            <area shape="rect" coords="840,5,1000,72" href="practical5.html">
     </map>
 
     <img src="https://github.com/jaixix/FullStackRep/blob/master/Images/image%20map%20image.jpg?raw=true" usemap="#map1">
