--- a/HTML files/practical5.html
+++ b/HTML files/practical5.html
@@ -10,12 +10,12 @@
     <img src="https://github.com/jaixix/FullStackRep/blob/master/Images/titlebar.jpg?raw=true" usemap="#map2">
 
     <map name="map2">
-            <area shape="rect" coords="10,5,120,71" href="../index.html">
-            <area shape="rect" coords="125,5,315,71" href="practical1.html">
-            <area shape="rect" coords="320,5,480,71" href="practical2.html">
-            <area shape="rect" coords="490,5,660,72" href="practical3.html">
-            <area shape="rect" coords="668,5,830,73" href="practical4.html">
-            <area shape="rect" coords="840,5,1000,72" href="practical5.html">
+            <area shape="rect" coords="2,5,152,52" href="../index.html" target="blank">
+            <area shape="rect" coords="162,5,390,52" href="practical1.html" target="blank">
+            <area shape="rect" coords="399,5,612,52" href="practical2.html" target="blank">
+            <area shape="rect" coords="623,5,830,52" href="practical3.html" target="blank">
+            <area shape="rect" coords="841,5,831,52" href="practical4.html" target="blank">
+            <area shape="rect" coords="1057,5,1273,52" href="#" target="blank">
     </map>
 
     <h1>Introduction to Front-End technologies</h1>
