--- a/HTML files/practical5.html
+++ b/HTML files/practical5.html
@@ -15,11 +15,12 @@
             <area shape="rect" coords="399,5,612,52" href="practical2.html" target="blank">
             <area shape="rect" coords="623,5,830,52" href="practical3.html" target="blank">
             <area shape="rect" coords="841,5,831,52" href="practical4.html" target="blank">
-            <area shape="rect" coords="1057,5,1273,52" href="#" target="blank">
+            <area shape="rect" coords="1057,5,1273,52" href="#">
     </map>
+    <br>
 
     <h1>Introduction to Front-End technologies</h1>
-
+    <br>
     <img src="https://github.com/jaixix/FullStackRep/blob/master/Images/image%20map%20image.jpg?raw=true" usemap="#map1">
     
     <map name="map1">
@@ -28,7 +29,7 @@
         <area shape="rect" coords="25,196,170,337" href="practical5js.html" alt="JS Introduction" target="blank">
         <area shape="poly" coords="288,202,346,222,337,300,287,328,240,301,232,223" href="practical5bs.html" target="blank" alt="Bootsrap Introduction">
     </map>
-
+    <br>
     <p>Click on any part of logo to know more about these Technologies</p>
 </body>
 </html>
