--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li>Live your First Web-Page on Github.  <a href="HTML files/practical2.html" target="_blank">Practical2</a></li>
         <li>Create a webpage showing a basic HTML structure using character entities and span tag. <a href="HTML files/practical3.html" target="_blank">Practical3</a></li>
         <li>Create a website having list of all practical and their individual practical page links. <a href="HTML files/practical4.html" target="_blank">Practical4</a></li>
-        <li><a href="HTML files/practical5.html" target="blank">Practical 5</a></li>
+        <li>Create a website that illustrates use of Map in Images.<a href="HTML files/practical5.html" target="blank">Practical 5</a></li>
     </ol>
 </body>
 </html>
