--- a/HTML files/practical5.html
+++ b/HTML files/practical5.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../CSS Files/prac5.css" type="text/css">
 </head>
 <body>
-    <img src="https://github.com/jaixix/FullStackRep/blob/master/Images/titlebar.jpg?raw=true" usemap="#map2">
+    <img src="https://github.com/jaixix/FullStackRep/blob/master/Images/titlebar.jpg?raw=true" usemap="#map2" id="one">
 
     <map name="map2">
             <area shape="rect" coords="2,5,152,52" href="../index.html" target="blank">
