--- a/HTML files/practical5.html
+++ b/HTML files/practical5.html
@@ -14,7 +14,7 @@
             <area shape="rect" coords="162,5,390,52" href="practical1.html" target="blank">
             <area shape="rect" coords="399,5,612,52" href="practical2.html" target="blank">
             <area shape="rect" coords="623,5,830,52" href="practical3.html" target="blank">
-            <area shape="rect" coords="841,5,831,52" href="https://jaixix.github.io/FullStackRep/HTML%20files/practical4.html" target="blank">
+            <a href="https://jaixix.github.io/FullStackRep/HTML%20files/practical4.html"><area shape="rect" coords="841,5,831,52" href="https://jaixix.github.io/FullStackRep/HTML%20files/practical4.html" target="blank"></a>
             <area shape="rect" coords="1057,5,1273,52" href="#">
     </map>
     <br>
