--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li>Create a webpage showing a basic HTML structure using character entities and span tag. <a href="HTML files/practical3.html" target="_blank">Practical3</a></li>
         <li>Create a website having list of all practical and their individual practical page links. <a href="HTML files/practical4.html" target="_blank">Practical4</a></li>
         <li>Create a website that illustrates use of Map in Images.<a href="HTML files/practical5.html" target="_blank">Practical 5</a></li>
+        <li>Create a Card Layout using CSS layout properties! <a href="HTML files/practical6.html">Practical 6</a></li>
     </ol>
 </body>
 </html>
