--- a/HTML files/practical6.html
+++ b/HTML files/practical6.html
@@ -11,11 +11,11 @@
     <h1>
       Practical-6: Create a Card Layout using CSS layout properties!
     </h1>
-    <div class="box">
-        <div class="one">
-      <div class="box">
-        <div class="boxImage">
-          <img src="../Images/introToHTML.jpg" alt="html introduction" />
+    <div class="container">
+        <div class="d1">
+            <div class="container">
+            <div class="containerImage">
+            <img src="../Images/introToHTML.jpg" alt="html introduction" />
         </div>
         <div class="title">
           <h3>Introduction to HTML</h3>
@@ -29,8 +29,8 @@
           </div>
         </div>
       </div>
-      <div class="box">
-        <div class="boxImage">
+      <div class="container">
+        <div class="containerImage">
           <img src="../Images/introToCSSjpg.jpg" alt="css intro" />
         </div>
         <div class="title">
@@ -46,8 +46,8 @@
           </div>
         </div>
       </div>
-      <div class="box">
-        <div class="boxImage">
+      <div class="container">
+        <div class="containerImage">
           <img src="../Images/introToJS.png" alt="javascript intro" />
         </div>
         <div class="title">
@@ -61,8 +61,8 @@
           </div>
         </div>
       </div>
-      <div class="box">
-        <div class="boxImage">
+      <div class="container">
+        <div class="containerImage">
           <img src="../Images/introToBootstrap.png" alt="bootstrap intro" />
         </div>
         <div class="title">
