--- a/HTML files/practical6.html
+++ b/HTML files/practical6.html
@@ -13,9 +13,9 @@
     </h1>
     <div class="container">
         <div class="d1">
-            <div class="container">
-            <div class="containerImage">
-            <img src="../Images/introToHTML.jpg" alt="html introduction" />
+      <div class="box">
+        <div class="boxImage">
+          <img src="../Images/introToHTML.jpg" alt="html introduction" />
         </div>
         <div class="title">
           <h3>Introduction to HTML</h3>
@@ -25,13 +25,13 @@
           pages using markup language. HTML is the combination of Hypertext and
           Markup language. Hypertext defines the link between the web pages.
           <div class="button">
-            <a href="practical5html.html" target="_blank">Read More</a>
+            <a href="./practical5/html.html" target="_blank">Read More</a>
           </div>
         </div>
       </div>
-      <div class="container">
-        <div class="containerImage">
-          <img src="../Images/introToCSSjpg.jpg" alt="css intro" />
+      <div class="box">
+        <div class="boxImage">
+          <img src="../images/css3.png" alt="css intro" />
         </div>
         <div class="title">
           <h3>Introduction to CSS</h3>
@@ -42,13 +42,13 @@
           presentable. CSS allows you to apply styles to web pages. 
           <br>
           <div class="button">
-            <a href="practical5css.html" target="_blank">Read More</a>
+            <a href="./practical5/css.html" target="_blank">Read More</a>
           </div>
         </div>
       </div>
-      <div class="container">
-        <div class="containerImage">
-          <img src="../Images/introToJS.png" alt="javascript intro" />
+      <div class="box">
+        <div class="boxImage">
+          <img src="../images/js.png" alt="javascript intro" />
         </div>
         <div class="title">
           <h3>Introduction to Javascript</h3>
@@ -57,13 +57,13 @@
           JavaScript is lightweight, cross-platform and interpreted scripting
           language. It is well-known for the development of web pages.The most common host environment is the browser.
           <div class="button">
-            <a href="practical5js.html" target="_blank">Read More</a>
+            <a href="./practical5/js.html" target="_blank">Read More</a>
           </div>
         </div>
       </div>
-      <div class="container">
-        <div class="containerImage">
-          <img src="../Images/introToBootstrap.png" alt="bootstrap intro" />
+      <div class="box">
+        <div class="boxImage">
+          <img src="../images/bootstrap.png" alt="bootstrap intro" />
         </div>
         <div class="title">
           <h3>Introduction to Bootstrap</h3>
@@ -74,7 +74,7 @@
           CSS, and JavaScript framework for developing responsive, mobile-first
           web sites.
           <div class="button">
-            <a href="practical5bs.html" target="_blank">Read More</a>
+            <a href="./practical5/boot.html" target="_blank">Read More</a>
           </div>
         </div>
       </div>
