--- a/HTML files/practical6.html
+++ b/HTML files/practical6.html
@@ -11,8 +11,8 @@
     <h1>
       Practical-6: Create a Card Layout using CSS layout properties!
     </h1>
-    <div class="container">
-        <div class="d1">
+    <div class="myContainer">
+        <div class="one">
       <div class="box">
         <div class="boxImage">
           <img src="../Images/introToHTML.jpg" alt="html introduction" />
