--- a/HTML files/practical7.html
+++ b/HTML files/practical7.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practical 7</title>
+    <link rel="stylesheet" href="../CSS Files/prac7.css">
 </head>
 <body>
-    <p>Header</p>
+    <div class="header">Header</div>
+    <div>Banner</div>
+    <h1>Section-1</h1>
+    <div></div>
 </body>
 </html>
