--- a/HTML files/practical7.html
+++ b/HTML files/practical7.html
@@ -8,8 +8,29 @@
 </head>
 <body>
     <div class="header">Header</div>
-    <div>Banner</div>
-    <h1>Section-1</h1>
-    <div></div>
+    <div class="banner">Banner</div>
+    <div class="heading">Section-1</div>
+    <div class="sec1">
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+    </div>
+    <div class="heading">Section-2</div>
+    <div class="sec2">
+        <div class="left">Main Content</div>
+        <div class="right">
+            <div class="article">Article - 1</div>
+            <div class="article">Article - 2</div>
+            <div class="article">Article - 3</div>
+        </div>
+    </div>
+    <div class="heading">Section-3</div>
+    <div class="sec3">
+        <div class="rect"></div>
+        <div class="rect"></div>
+        <div class="rect"></div>
+    </div>
+    <div class="footer">Footer</div>
 </body>
 </html>
