--- a/HTML files/practical7.html
+++ b/HTML files/practical7.html
@@ -4,33 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practical 7</title>
-    <link rel="stylesheet" href="../CSS Files/prac7.css">
+    <link rel="stylesheet" href="layoutcss.css">
 </head>
 <body>
-    <div class="header">Header</div>
-    <div class="banner">Banner</div>
-    <div class="heading">Section-1</div>
-    <div class="sec1">
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-    </div>
-    <div class="heading">Section-2</div>
-    <div class="sec2">
-        <div class="left">Main Content</div>
-        <div class="right">
-            <div class="article">Article - 1</div>
-            <div class="article">Article - 2</div>
-            <div class="article">Article - 3</div>
+    <div class="container">
+        <div class="header">Header</div>
+        <div class="banner">Banner</div>
+        <div class="heading">Section-1</div>
+        <div class="sec1">
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
         </div>
+        <div class="heading">Section-2</div>
+        <div class="sec2">
+            <div class="left">Main Content</div>
+            <div class="right">
+                <div class="article">Article - 1</div>
+                <div class="article">Article - 2</div>
+                <div class="article">Article - 3</div>
+            </div>
+        </div>
+        <div class="heading">Section-3</div>
+        <div class="sec3">
+            <div class="box">
+                <div class="rect"></div>
+                <div class="rect"></div>
+                <div class="rect"></div>
+                <div class="rect"></div>
+            </div>
+        </div>
+        <div class="footer">Footer</div>
     </div>
-    <div class="heading">Section-3</div>
-    <div class="sec3">
-        <div class="rect"></div>
-        <div class="rect"></div>
-        <div class="rect"></div>
-    </div>
-    <div class="footer">Footer</div>
 </body>
 </html>
