--- a/HTML files/practical7.html
+++ b/HTML files/practical7.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practical 7</title>
-    <link rel="stylesheet" href="layoutcss.css">
+    <link rel="stylesheet" href="../CSS Files/prac7.css">
 </head>
 <body>
     <div class="container">
