--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <li>Create a website that illustrates use of Map in Images.<a href="HTML files/practical5.html" target="_blank">Practical 5</a></li>
         <li>Create a Card Layout using CSS layout properties! <a href="HTML files/practical6.html">Practical 6</a></li>
         <li>Create a Layout without any content and responsiveness. <a href="HTML files/practical7.html">Practical7</a></li>
-        <li>Create a Layout without any content and responsiveness. <a href="HTML files/practical7.html">Practical8</a></li>
+        <li>Create a Layout with content and responsiveness. <a href="HTML files/practical8.html">Practical8</a></li>
     </ol>
 </body>
 </html>
