--- a/HTML files/practical8.html
+++ b/HTML files/practical8.html
@@ -19,20 +19,20 @@
             </ul>
         </div>
         <div class="banner" id="Home">
-          Welcome!!
+          Welcome To My Website!
         </div>
         
         <div class = "heading"   id="Team">
             <h1 >OUR TEAM</h1>
         </div>
         <div class = "section-1">
-            <div class="circle"><img src="../images/practical8/lady.png"> <p>Mansi Goyal</p> </div>
-            <div class="circle"><img src="../images/practical8/lady.png"> <p>Mansi Goyal</p> </div>
-            <div class="circle"><img src="../images/practical8/lady.png"> <p>Mansi Goyal</p> </div>
-            <div class="circle"><img src="../images/practical8/lady.png"> <p>Mansi Goyal</p> </div>
+            <div class="circle"><img src="../Images/guy.png"> <p>Mansi Goyal</p> </div>
+            <div class="circle"><img src="../Images/guy.png"> <p>Mansi Goyal</p> </div>
+            <div class="circle"><img src="../Images/guy.png"> <p>Mansi Goyal</p> </div>
+            <div class="circle"><img src="../Images/guy.png"> <p>Mansi Goyal</p> </div>
         </div>
 
-        <div class = "heading"id="About" >
+        <div class="heading" id="About" >
             <h1>About Us</h1>
         </div> 
         <div class="section-2">
@@ -40,9 +40,9 @@
         Our main motive is to learn fullstack development. We started learning full stack development by learning front end development first. Here we are performing many practicals and making prjoects to enhance our learning.This website is also a part of the leaarning phase. Till now we have completed 7 practicals and this is the 8th one.
         </div>
         <div class="right">
-            <div class="artical"><img src="../images/practical8/p1.jpg" alt=""></div>
-            <div class="artical"><img src="../images/practical8/p2.jpeg" alt=""></div>
-            <div class="artical"><img src="../images/practical8/p3.jpg" alt=""></div>
+            <div class="artical"><img src="../Images/p1.jpg" alt=""></div>
+            <div class="artical"><img src="../Images/p2.jpeg" alt=""></div>
+            <div class="artical"><img src="../Images/p3.jpg" alt=""></div>
         </div>
     </div>
     <a id="Technologies"></a>
@@ -53,7 +53,7 @@
             <div class="rectBox">
                 <div class="box">
                     <div class="boxImage">
-                      <img src="../images/html-5.png" alt="html introduction" />
+                      <img src="../Images/introToHTML.jpg" alt="html introduction" />
                     </div>
                     <div class="title">
                       <h3>Introduction to HTML</h3>
@@ -63,7 +63,7 @@
                       pages using markup language. HTML is the combination of Hypertext and
                       Markup language. Hypertext defines the link between the web pages.</p>
                       <div class="button">
-                        <a href="./practical5/html.html" target="_blank">Read More</a>
+                        <a href="practical5html.html" target="_blank">Read More</a>
                       </div>
                     </div>
                   </div>
@@ -71,7 +71,7 @@
             <div class="rectBox">
                 <div class="box">
                     <div class="boxImage">
-                      <img src="../images/css3.png" alt="css intro" />
+                      <img src="../Images/introToCSSjpg.jpg" alt="css intro" />
                     </div>
                     <div class="title">
                       <h3>Introduction to CSS</h3>
@@ -81,7 +81,7 @@
                       designed language intended to simplify the process of making web pages
                       presentable. CSS allows you to apply styles to web pages. </p>
                       <div class="button">
-                        <a href="./practical5/css.html" target="_blank">Read More</a>
+                        <a href="practical5css.html" target="_blank">Read More</a>
                       </div>
                     </div>
                   </div>
@@ -89,7 +89,7 @@
             <div class="rectBox">
                 <div class="box">
                     <div class="boxImage">
-                      <img src="../images/js.png" alt="javascript intro" />
+                      <img src="../Images/introToJS.png" alt="javascript intro" />
                     </div>
                     <div class="title">
                       <h3>Introduction to Javascript</h3>
@@ -98,7 +98,7 @@
                       JavaScript is lightweight, cross-platform and interpreted scripting
                       language. It is well-known for the development of web pages.The most common host environment is the browser.</p>
                       <div class="button">
-                        <a href="./practical5/js.html" target="_blank">Read More</a>
+                        <a href="practical5js.html" target="_blank">Read More</a>
                       </div>
                     </div>
                   </div>
@@ -106,7 +106,7 @@
             <div class="rectBox">
                 <div class="box">
                     <div class="boxImage">
-                      <img src="../images/bootstrap.png" alt="bootstrap intro" />
+                      <img src="../Images/introToBootstrap.png" alt="bootstrap intro" />
                     </div>
                     <div class="title">
                       <h3>Introduction to Bootstrap</h3>
@@ -117,7 +117,7 @@
                       CSS, and JavaScript framework for developing responsive, mobile-first
                       web sites.</p>
                       <div class="button">
-                        <a href="./practical5/boot.html" target="_blank">Read More</a>
+                        <a href="practical5bs.html" target="_blank">Read More</a>
                       </div>
                     </div>
                   </div>
@@ -132,10 +132,10 @@
             <ul>
                 
                 <li>
-                    MADE BY MANSI GOYAL :)
+                    Copyright 2020 | Jaideep Lalchandani
                 </li>
                 <li>
-                    To email : <a href="mailto: mansi.goyal_cs18@gla.ac.in">Click here</a>
+                    To email : <a href="mailto: jaideep.lalchandani_cs18@gla.ac.in">Click here</a>
                 </li>
                 <li>
                     <a href="#"> GO TO TOP</a>
