--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
         <li>Create a website having list of all practical and their individual practical page links. <a href="HTML files/practical4.html" target="_blank">Practical4</a></li>
         <li>Create a website that illustrates use of Map in Images.<a href="HTML files/practical5.html" target="_blank">Practical 5</a></li>
         <li>Create a Card Layout using CSS layout properties! <a href="HTML files/practical6.html">Practical 6</a></li>
-        <li>Create a Layout without any content and responsiveness. <a href="HTML files/practical7.html">Practical7</a></li>
-        <li>Create a Layout with content and responsiveness. <a href="HTML files/practical8.html" target="_blank">Practical8</a></li>
+        <li>Create a Layout without any content and responsiveness. <a href="HTML files/practical7.html">Practical 7</a></li>
+        <li>Create a Layout with content and responsiveness. <a href="HTML files/practical8.html" target="_blank">Practical 8</a></li>
+        <li>Create a Layout with content and responsiveness added via Media Query. <a href="HTML files/practical9.html" target="_blank">Practical 9</a></li>
     </ol>
 </body>
 </html>
