--- a/HTML files/practical8.html
+++ b/HTML files/practical8.html
@@ -26,7 +26,7 @@
             <h1 >OUR TEAM</h1>
         </div>
         <div class = "section-1">
-            <div class="circle"><img src="../Images/guy.png"> <p>Jaideep Lalchandani/p> </div>
+            <div class="circle"><img src="../Images/guy.png"> <p>Jaideep Lalchandani</p> </div>
             <div class="circle"><img src="../Images/guy.png"> <p>Shreya  Taneja</p> </div>
             <div class="circle"><img src="../Images/guy.png"> <p>Naman Gandhi</p> </div>
             <div class="circle"><img src="../Images/guy.png"> <p>Mansi Goyal</p> </div>
