--- a/HTML files/practical9.html
+++ b/HTML files/practical9.html
@@ -152,7 +152,7 @@
         </div>
         <div class="section" id="contact">Contact</div>
         <div class="footer">
-            <ul>
+            <ul style="text-decoration: none;">
                 
                 <li>
                     Copyright 2020 | Jaideep Lalchandani
