--- a/HTML files/practical9.html
+++ b/HTML files/practical9.html
@@ -38,16 +38,16 @@
         <div class="section" id="team">Our Team</div>
         <div class="members" >
           <div id="circle">
-            <img src="../Images/guy.png" alt="Jaideep Lalchandani"><p>Jaideep Lalchandani</p>
+            <img src="../Images/guy.png" alt="Jaideep Lalchandani">
           </div>
           <div id="circle">
-            <img src="../Images/guy.png" alt="Shreya Taneja"><p>Shreya  Taneja</p>
+            <img src="../Images/guy.png" alt="Shreya Taneja">
           </div>
           <div id="circle">
-            <img src="../Images/guy.png" alt="Naman Gandhi"><p>Naman Gandhi</p>
+            <img src="../Images/guy.png" alt="Naman Gandhi">
           </div>
           <div id="circle">
-            <img src="../Images/guy.png" alt="Mansi Goyal"><p>Mansi Goyal</p>
+            <img src="../Images/guy.png" alt="Mansi Goyal">
           </div>
         </div>
         <div class="section" id="about">About Us</div>
