--- a/HTML files/practical9.html
+++ b/HTML files/practical9.html
@@ -150,8 +150,8 @@
             </div>
           </div>
         </div>
-        <div class="section" id="contact">Contact</div>
-        <div class="footer">
+        <div class="section" id="contact">Contact Me</div>
+        <div class="footer" style="background-color: grey; color:white;">
             <ul style="list-style: none;">
                 
                 <li>
