--- a/HTML files/practical9.html
+++ b/HTML files/practical9.html
@@ -158,10 +158,10 @@
                     Copyright 2020 | Jaideep Lalchandani
                 </li>
                 <li>
-                    To email : <a href="mailto: jaideep.lalchandani_cs18@gla.ac.in">Click here</a>
+                    To email : <a href="mailto: jaideep.lalchandani_cs18@gla.ac.in" style="text-decoration: none;">Click here</a>
                 </li>
                 <li>
-                    <a href="#"> GO TO TOP</a>
+                    <a href="#" style="text-decoration: none;"> GO TO TOP</a>
                 </li>
             </ul>
         </div>
