--- a/HTML files/practical10.html
+++ b/HTML files/practical10.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="header">
-        <img src="../Images/fullstackLogo.png" alt="">
+        <img src="../Images/imgbin-zebra-norway-no-logo-copyright-zebra-62xGzQcWBGmXbtfCPzSx8e7PW.jpg" alt="">
         <h1>FULLSTACK</h1>
     </div>
     <input type="checkbox" name="" id="chk" />
