--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <li>Create a Layout without any content and responsiveness. <a href="HTML files/practical7.html">Practical 7</a></li>
         <li>Create a Layout with content and responsiveness. <a href="HTML files/practical8.html" target="_blank">Practical 8</a></li>
         <li>Create a Layout with content and responsiveness added via Media Query. <a href="HTML files/practical9.html" target="_blank">Practical 9</a></li>
-        <li>Create a Sidebar for your ppage with toggle button and responsiveness. <a href="HTML files/practical10.html">Practical 10</a></li>
+        <li>Create a Sidebar for your ppage with toggle button and responsiveness. <a href="HTML files/practical10.html" target="blank">Practical 10</a></li>
     </ol>
 </body>
 </html>
