--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <li>Create a Layout with content and responsiveness added via Media Query. <a href="HTML files/practical9.html" target="_blank">Practical 9</a></li>
         <li>Create a Sidebar for your ppage with toggle button and responsiveness. <a href="HTML files/practical10.html" target="blank">Practical 10</a></li>
         <li>Create a FullStack Live Practical Book. <a href="HTML files/practical11.html" target="blank">Practical 11</a></li>
+        <li>Create an Image Practical for 12th Practical. <a href="HTML files/practical12.html" target="blank">Practical 12</a></li>
     </ol>
 </body>
 </html>
