--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <li>Create a Sidebar for your ppage with toggle button and responsiveness. <a href="HTML files/practical10.html" target="blank">Practical 10</a></li>
         <li>Create a FullStack Live Practical Book. <a href="HTML files/practical11.html" target="blank">Practical 11</a></li>
         <li>Create an Image Practical for 12th Practical. <a href="HTML files/practical12.html" target="blank">Practical 12</a></li>
+        <li>Create a FullStack Practical with Quick links etc. <a href="HTML files/practical13.html" target="blank">Practical 13</a></li>
     </ol>
 </body>
 </html>
