--- a/HTML files/practical13.html
+++ b/HTML files/practical13.html
@@ -25,7 +25,7 @@
            <section class="link1">
                <h2>Categories</h2>
                <ul>
-                   <li><a href="#">c</a></li>
+                   <li><a href="#">CATALOGS</a></li>
                    <li><a href="#">UI DESIGN</a></li>
                    <li><a href="#">PHP</a></li>
                    <li><a href="#">JAVA</a></li>
@@ -36,29 +36,29 @@
            <section class="link2">
                 <h2>Quick links</h2>
                 <ul>
-                    <li><a href="#">ABOUT US</a></li>
-                    <li><a href="#">contact us</a></li>
-                    <li><a href="#">contribute</a></li>
-                    <li><a href="#">privacy</a></li>
-                    <li><a href="#">sitemap</a></li>
-                    <li><a href="#">disclaimer</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">Contribute</a></li>
+                    <li><a href="#">Privacy</a></li>
+                    <li><a href="#">Sitemap</a></li>
+                    <li><a href="#">Disclaimer</a></li>
                 </ul>
             </section>
             <section class="link3">
-                <h2>contact us</h2>
+                <h2>Contact us</h2>
                 <ul> 
-                    <li><i class="fa fa-home"></i><span>sco-15,UP,india</span></li>
+                    <li><i class="fa fa-home"></i><span>SCO-17, Lucknow, India</span></li>
                     <li><i class="fa fa-envelope"></i><span>contactUs@gmail.com</span></li>
-                    <li><i class="fa fa-phone-square"></i><span>mobile: 9123456780</span></li>
-                    <li><i class="fa fa-facebook-square"></i><span>abcindia</span></li>
+                    <li><i class="fa fa-phone-square"></i><span>Mobile: +91-9123456780</span></li>
+                    <li><i class="fa fa-facebook-square"></i><span>ABCDFB</span></li>
                     
                 </ul>
             </section>     
         </section>
         <hr width="100%" noshade/>
         <section class="sec-2">
-            <p>register for free</p>
-            <a href="#">sign up</a>
+            <p>Register For Free</p>
+            <a href="#">SIGN UP</a>
         </section>
         <hr width="100%" noshade/>
         <section class="sec-3">
