--- a/HTML files/practical14.html
+++ b/HTML files/practical14.html
@@ -33,7 +33,7 @@
             <div>
                 <input type="password" name="password" id="password" placeholder="Enter your password">
             </div>
-            <p>Forget <b>Password?</b></p>
+            <p>Forgot <b>Password?</b></p>
             <input type="submit" value="LOGIN">
             <p id="p2">Don't have account? <b>SIGN UP HERE!</b></p>
         </div>
