--- a/HTML files/practical15.html
+++ b/HTML files/practical15.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Counter</title>
+    <link rel="stylesheet" href="../CSS Files/prac15.css">
   </head>
   <body>
     <h1>COUNTER</h1>
